02-04-2026 Add new view pages 'Users', 'Departments', 'Positions', 'Roles'.